--- a/client/src/App.css
+++ b/client/src/App.css
@@ -39,7 +39,6 @@
 
 
 .admin-page {
-
   margin: 0;
   position: absolute;
   left: 50%;
@@ -52,4 +51,18 @@
   width: 250px;
   align-items: center;
   justify-content: center;
+}
+
+
+.home-description {
+  margin: 0;
+  position: relative;
+  left: 50%;
+  transform: translate(-50%, 50%);
+  text-align: center;
+}
+
+.home-title-grid {  
+  width: 100vw;
+  padding-bottom: 100px;
 }
